--- a/public/index.html
+++ b/public/index.html
@@ -47,8 +47,8 @@
                           {{appointment.priorityFloor}}
                       </td>
                       <td style="text-align: right">
-                          <button ng-click="moveUp(key)" ng-show="!$first">/\</button>
-                          <button ng-click="moveDown(key)" ng-show="!$last">\/</button>
+                          <button ng-click="moveUp(key)" ng-show="!$first">up priority</button>
+                          <button ng-click="moveDown(key)" ng-show="!$last">down priority</button>
                           <button ng-click="delete(key)">X</button>
                       </td>
                   </tr>
